--- a/ClientAstree/Views/User/index.cshtml
+++ b/ClientAstree/Views/User/index.cshtml
@@ -5,6 +5,53 @@
 }
 
 <style>
+    /* Colors */
+    .content-container { 
+        background-color: #fff; 
+        padding: 30px; 
+        max-width: 80%; 
+        margin: 20px auto; 
+    }
+    h2 { 
+        color: #212529; 
+        margin-top: 20px; 
+        font-size: 1.5rem; 
+        font-weight: 500; 
+        text-align: center;
+    }
+    .breadcrumb-item { 
+        font-size: 1rem; 
+    }
+    .table th { 
+        background-color: #f8f9fa; 
+        color: #212529; 
+        font-size: 1rem; 
+    }
+    .table td { 
+        font-size: 1rem; 
+    }
+    .form-label { 
+        font-size: 0.875rem; 
+    }
+    .btn { 
+        transition: background-color 0.3s ease, box-shadow 0.3s ease; 
+    }
+    .btn:hover { 
+        filter: brightness(95%);
+        box-shadow: 0 2px 5px rgba(0,0,0,0.15); 
+    }
+    .table-hover tbody tr:hover { 
+        background-color: #f5f5f5; 
+    }
+    .pagination .page-item.active .page-link { 
+        background-color: #4E6B8B; 
+        border-color: #4E6B8B; 
+    }
+    .pagination-container { 
+        padding: 10px; 
+        margin-bottom: 50px; 
+    }
+
     .bg-image {
         background-image: url('/img/fam1.png');
         background-size: cover;
@@ -12,12 +59,6 @@
         background-repeat: no-repeat;
         min-height: 100vh; /* Ensures it covers the full height of the viewport */
     }
-
-    @* .content-container {
-        padding: 20px;
-        border-radius: 8px;
-        box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-    } *@
 
     .form-container, .table-container, .pagination-container {
         background-color: rgba(255, 255, 255, 0.8); /* White with 80% opacity */
@@ -27,12 +68,10 @@
         margin-bottom: 20px;
     }
 
-    .pagination-container {
-        padding: 10px;
-        margin-bottom: 50px;
-    }
+     .btn-success { background-color: rgba(40, 167, 69, 0.1); }
+    .btn-info { background-color: rgba(0, 123, 255, 0.1); }
+    .btn-danger { background-color: rgba(220, 53, 69, 0.1); }
 </style>
-
 
 <div class="container-fluid bg-image">
     <div class="row">
@@ -85,7 +124,7 @@
 
                 <div class="table-container">
                     <div class="table-responsive">
-                        <table class="table">
+                        <table class="table table-striped table-hover">
                             <thead>
                                 <tr>
                                     <th class="text-center">@Html.DisplayNameFor(model => model.Id)</th>
@@ -157,4 +196,3 @@
         </div>
     </div>
 </div>
-
